Correct img width on mobile single post

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -73,6 +73,11 @@ section {
   @media only screen and (max-width: 760px) {
     padding: 0 0 1rem;
   }
+
+  img {
+    width: 100%;
+    max-width: 1200px;
+  }
 }
 
 h2 {
